--- a/Minotaur/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Minotaur/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Minotaur.Areas.Identity
 @using Minotaur.Areas.Identity.Pages
+@using Minotaur.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
