--- a/Minotaur/Views/Shared/_Layout.cshtml
+++ b/Minotaur/Views/Shared/_Layout.cshtml
@@ -27,6 +27,13 @@
                         <button class="btn btn-dark my-4 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
                     </form>
                 </div>
+
+
+                @if (User.Identity.IsAuthenticated == true)
+                {
+                    <button class="btn btn-dark my-4 my-sm-0" type="submit"><i class="bi bi-search"></i>ВСЕ ОКЕЙ</button>
+                }
+
                 <div class="navbar-collapse collapse d-sm-inline-flex">
                     <partial name="_LoginPartial" />
                 </div>
