--- a/Minotaur/Areas/Stockkeeper/Views/Stock/Index.cshtml
+++ b/Minotaur/Areas/Stockkeeper/Views/Stock/Index.cshtml
@@ -2,9 +2,9 @@
 
 <h2>
     Склад
-    @if (Model.Stock != null)
+    @if (Model.Office != null)
     {
-        <a>@Model.Stock.City,@Model.Stock.Street</a>
+        <a>@Model.Office.City,@Model.Office.Street</a>
     }
 </h2>
 
