--- a/Minotaur/Views/Shared/_Layout.cshtml
+++ b/Minotaur/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
 
                 @if (User.Identity.IsAuthenticated == true)
                 {
-                    if (User.IsInRole(Roles.RoleAdmin))
+                    if (User.IsInRole(Roles.Role_Admin))
                     {
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item dropdown">
@@ -46,7 +46,7 @@
                             </li>
                         </ul>
                     }
-                    else if (User.IsInRole(Roles.RoleWorkerOrderPickupPoint))
+                    else if (User.IsInRole(Roles.Role_Worker_Order_Pickup_Point))
                     {
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item dropdown">
@@ -61,7 +61,7 @@
                             </li>
                         </ul>
                     }
-                    else if (User.IsInRole(Roles.RoleOrderPicker))
+                    else if (User.IsInRole(Roles.Role_Order_Picker))
                     {
                         <ul class="navbar-nav flex-grow-1">
                             <li>
@@ -69,7 +69,7 @@
                             </li>
                         </ul>
                     }
-                    else if (User.IsInRole(Roles.RoleStockkeeper))
+                    else if (User.IsInRole(Roles.Role_Stockkeeper))
                     {
                         <ul class="navbar-nav flex-grow-1">
                             <li>
