--- a/Minotaur/Areas/Admin/Views/Office/Office.cshtml
+++ b/Minotaur/Areas/Admin/Views/Office/Office.cshtml
@@ -8,7 +8,7 @@
             </div>
         </div>
         <h1>Офисы</h1>
-        <table id="tableOffice" class="table table-bordered border border-0 rounded rounded-2 table-striped pt-3 my-1">
+        <table id="tableOffice" class="display table table-bordered border border-0 rounded rounded-2 table-striped pt-3 my-1">
             <thead class="pt-4 table-dark">
                 <tr>
                     <th>Название</th>
@@ -16,7 +16,7 @@
                     <th>Статус</th>
                     <th>Адрес</th>
                     <th>Режим работы</th>
-                    <th>Ответсвенный</th>
+                    <th>Ответственный</th>
                     <th>Загруженность</th>
                     <th>Заметки</th>
                     <th>Действия</th>
