--- a/Minotaur/Areas/Admin/Views/Roles/ViewRoles.cshtml
+++ b/Minotaur/Areas/Admin/Views/Roles/ViewRoles.cshtml
@@ -1,17 +1,17 @@
 ﻿
 <div class="container mb-5">
     <div class="row">
-        <h1>Работники</h1>
+        <h1>Сотрудники</h1>
         <table id="tableWorker" class="display table table-bordered border border-0 rounded rounded-2 table-striped pt-3 my-1">
             <thead class="pt-4 table-dark">
                 <tr>
-                    <th>WorkerId</th>
                     <th>UserId</th>
-                    <th>ФИО</th>
                     <th>Статус</th>
+                    <th>ФИО</th>
+                    <th>Должность</th>
                     <th>Место работы</th>  
-                    <th>Роли</th>
-                    <th></th>
+                    <th>Почта</th>
+                    <th>Права</th>
                 </tr>
             </thead>
         </table>
