--- a/Minotaur/Areas/Stockkeeper/Views/Stock/Index.cshtml
+++ b/Minotaur/Areas/Stockkeeper/Views/Stock/Index.cshtml
@@ -4,7 +4,7 @@
     Склад
     @if (Model.Office != null)
     {
-        <a>@Model.Office.City,@Model.Office.Street</a>
+        <a>@Model.Office.Name,@Model.Office.City</a>
     }
 </h2>
 
