--- a/Minotaur/Areas/Stockkeeper/Views/Stock/PurchaseRequest.cshtml
+++ b/Minotaur/Areas/Stockkeeper/Views/Stock/PurchaseRequest.cshtml
@@ -8,7 +8,7 @@
         <div class="col-8"></div>
         <form id="purchaseRequestSend" method="POST">
             <div class="col-2 pb-4 mb-3 mt-2 pt-3 text-right">
-                <button onclick="sendTable()" type="submit" class="btn btn-success border-0 form-control">Оформить</button>
+                <button onclick="sendTable()" type="button" class="btn btn-success border-0 form-control">Оформить</button>
             </div>
             <div class="row border border-2 rounded rounded-2 mt-1 p-2">
                 <table id="purchaseRequest" class="table table-bordered table-striped pt-3 my-1">
