--- a/Minotaur/Areas/Stockkeeper/Views/Stock/Index.cshtml
+++ b/Minotaur/Areas/Stockkeeper/Views/Stock/Index.cshtml
@@ -1,17 +1,17 @@
-﻿@model StockVM
+﻿@model Office
 
 <h2>
     Склад
-    @if (Model.Office != null)
+    @if (Model != null)
     {
-        <a>@Model.Office.Name,@Model.Office.City</a>
+        <a>@Model.Name,@Model.City</a>
     }
 </h2>
 
 <div class="container mb-5">
     <div class="row">
         <div class="col-2 mb-3 mt-2 pt-3">
-            <button id="purchaseRequestSend" onclick="addProductInStock('/Stockkeeper/Stock/AddProductInStock?')" class="btn btn-success border-0 form-control">Новое поступление</button>
+            <button id="purchaseRequestSend" onclick="addProductInStock()" class="btn btn-success border-0 form-control">Новое поступление</button>
         </div>
         <div class="col-8"></div>
         <div class="col-2 pb-4 mb-3 mt-2 pt-3 text-right">
