--- a/Minotaur/Views/Shared/_Layout.cshtml
+++ b/Minotaur/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                             </li>
                         </ul>
                     }
-                    else if (User.IsInRole(Roles.Role_Worker_Order_Pickup_Point))
+                    if (User.IsInRole(Roles.Role_Worker_Order_Pickup_Point))
                     {
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item dropdown">
@@ -61,7 +61,7 @@
                             </li>
                         </ul>
                     }
-                    else if (User.IsInRole(Roles.Role_Order_Picker))
+                    if (User.IsInRole(Roles.Role_Order_Picker))
                     {
                         <ul class="navbar-nav flex-grow-1">
                             <li>
@@ -69,7 +69,7 @@
                             </li>
                         </ul>
                     }
-                    else if (User.IsInRole(Roles.Role_Stockkeeper))
+                    if (User.IsInRole(Roles.Role_Stockkeeper))
                     {
                         <ul class="navbar-nav flex-grow-1">
                             <li>
@@ -77,7 +77,7 @@
                             </li>
                         </ul>
                     }
-                    else if (User.IsInRole(Roles.Role_HR))
+                    if (User.IsInRole(Roles.Role_HR))
                     {
                         <ul class="navbar-nav flex-grow-1">
                             <li>
