--- a/Minotaur/Areas/WorkerOrderPickupPoint/Views/OrderWorker/Order.cshtml
+++ b/Minotaur/Areas/WorkerOrderPickupPoint/Views/OrderWorker/Order.cshtml
@@ -14,7 +14,7 @@
     </div>
     <div>
         <form class="d-flex" method="post" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@ViewBag.operation">
-            <input class="form-control me-sm-1 bg-light" type="search" pattern="[0-9]+" name="searchOrderId" placeholder="Введите номер заказа">
+            <input class="form-control me-sm-1 bg-light" type="search" name="searchOrderId" placeholder="Введите номер заказа">
             <button class="btn btn-dark my-4 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
         </form>
     </div>
