--- a/Minotaur/Views/Shared/_Layout.cshtml
+++ b/Minotaur/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                                     Управление
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Book" asp-action="Index">Книги</a></li>
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Товары</a></li>
                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Категории</a></li>
                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Office" asp-action="Office">Офисы</a></li>
                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Roles" asp-action="ViewRoles">Сотрудники</a></li>
