--- a/Minotaur/Views/Shared/_Layout.cshtml
+++ b/Minotaur/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
                     {
                         <ul class="navbar-nav flex-grow-1">
                             <li>
-                                <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="Registration">Сборка заказа</a>
+                                <a class="nav-link text-light" asp-area="Picker" asp-controller="OrderPicking" asp-action="Index">Сборка заказов</a>
                             </li>
                         </ul>
                     }
