--- a/Minotaur/Views/Shared/_Layout.cshtml
+++ b/Minotaur/Views/Shared/_Layout.cshtml
@@ -32,34 +32,46 @@
                 {
                     if (User.IsInRole(Roles.Role_Admin))
                     {
-                        
+
                         <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item dropdown">
+                            <li>
+                            <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Товары</a>
+                            <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Категории</a>
+                            <a class="dropdown-item" asp-area="Admin" asp-controller="Office" asp-action="Office">Офисы</a>
+                            <a class="dropdown-item" asp-area="Admin" asp-controller="Roles" asp-action="ViewRoles">Сотрудники</a>
+                            </li>
+                            @* <li class="nav-item dropdown">
                                 <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Управление
+                                Управление
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Товары</a></li>
-                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Категории</a></li>
-                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Office" asp-action="Office">Офисы</a></li>
-                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Roles" asp-action="ViewRoles">Сотрудники</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Товары</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Категории</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Office" asp-action="Office">Офисы</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Roles" asp-action="ViewRoles">Сотрудники</a></li>
                                 </ul>
-                            </li>
+                                </li>*@
                         </ul>
                     }
                     if (User.IsInRole(Roles.Role_Worker_Order_Pickup_Point))
                     {
                         <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item dropdown">
-                                <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Управление заказами
-                                </button>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.ViewOrderDetails">Проверить состояние</a></li>
-                                    <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.AcceptOrder">Прием</a></li>
-                                    <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.IssueOrder">Выдача</a></li>
-                                </ul>
+                            <li>
+                            <a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.ViewOrderDetails">Проверить состояние</a>
+                            <a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.AcceptOrder">Прием</a>
+                            <a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.IssueOrder">Выдача</a>
                             </li>
+
+                                        @* <li class="nav-item dropdown">
+                                            <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Управление заказами
+                                            </button>
+                                            <ul class="dropdown-menu dropdown-menu-dark">
+                                            <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.ViewOrderDetails">Проверить состояние</a></li>
+                                            <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.AcceptOrder">Прием</a></li>
+                                            <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.IssueOrder">Выдача</a></li>
+                                            </ul>
+                                            </li>*@
                         </ul>
                     }
                     if (User.IsInRole(Roles.Role_Order_Picker))
@@ -107,7 +119,7 @@
                             <a class="nav-link text-light" asp-area="Customer" asp-controller="NotificationCustomer" asp-action="Index">
                                 <i class="bi bi-chat-dots-fill"></i> Сообщения
                             </a>
-                        </li>                        
+                        </li>
                     </ul>
                 }
 
