--- a/Minotaur/Views/Shared/_Layout.cshtml
+++ b/Minotaur/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-4 rounded-bottom-2">
             <div class="container-fluid">
-                <a class="navbar-brand text-light " asp-area="Customer" asp-controller="Home" asp-action="Index"> Минота́вр </a>
+                <a class="navbar-brand text-light" asp-area="Customer" asp-controller="Home" asp-action="Index"> Минота́вр </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -27,101 +27,9 @@
                         <button class="btn btn-dark my-4 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
                     </form>
                 </div>
-
-                @if (User.Identity?.IsAuthenticated == true)
-                {
-                    if (User.IsInRole(Roles.Role_Admin))
-                    {
-                        <ul class="navbar-nav flex-grow-1">
-
-                            <li><a class="nav-link text-light" asp-area="Admin" asp-controller="Product" asp-action="Index">Товары </a></li>
-                            <li><a class="nav-link text-light" asp-area="Admin" asp-controller="Category" asp-action="Index">Категории </a></li>
-                            <li><a class="nav-link text-light" asp-area="Admin" asp-controller="Office" asp-action="Office">Офисы </a></li>
-                            <li><a class="nav-link text-light" asp-area="Admin" asp-controller="Roles" asp-action="ViewRoles">Сотрудники </a></li>
-
-                           @* <li class="nav-item dropdown">
-                                <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Управление
-                                </button>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Товары</a></li>
-                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Категории</a></li>
-                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Office" asp-action="Office">Офисы</a></li>
-                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Roles" asp-action="ViewRoles">Сотрудники</a></li>
-                                </ul>
-                            </li>*@
-                        </ul>
-                    }
-                    if (User.IsInRole(Roles.Role_Worker_Order_Pickup_Point))
-                    {
-                        <ul class="navbar-nav flex-grow-1">  
-                        <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.ViewOrderDetails">Проверить состояние</a></li>
-                        <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.AcceptOrder">Прием</a></li>
-                        <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.IssueOrder">Выдача</a></li>
-                        </ul>
-
-                        @*<ul class="navbar-nav flex-grow-1">                        
-                            <li class="nav-item dropdown">
-                                <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Управление заказами
-                                </button>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.ViewOrderDetails">Проверить состояние</a></li>
-                                    <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.AcceptOrder">Прием</a></li>
-                                    <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="OrderWorker" asp-action="Order" asp-route-operation="@OperationOrderPickUp.IssueOrder">Выдача</a></li>
-                                </ul>
-                            </li>
-                        </ul>*@
-                    }
-                    if (User.IsInRole(Roles.Role_Order_Picker))
-                    {
-                        <ul class="navbar-nav flex-grow-1">
-                            <li>
-                                <a class="nav-link text-light" asp-area="Picker" asp-controller="OrderPicking" asp-action="Index">Сборка заказов</a>
-                            </li>
-                        </ul>
-                    }
-                    if (User.IsInRole(Roles.Role_Stockkeeper))
-                    {
-                        <ul class="navbar-nav flex-grow-1">
-                            <li>
-                                <a class="nav-link text-light" asp-area="Stockkeeper" asp-controller="Stock" asp-action="Index">Склад</a>
-                            </li>
-                        </ul>
-                    }
-                    if (User.IsInRole(Roles.Role_HR))
-                    {
-                        <ul class="navbar-nav flex-grow-1">
-                            <li>
-                                <a class="nav-link text-light" asp-area="HR" asp-controller="Worker" asp-action="Index">Персонал</a>
-                            </li>
-                        </ul>
-                    }
-
-                    <ul class="navbar-nav flex-grow-1 justify-content-end">
-                        <li>
-                            <a class="nav-link text-light" asp-area="Customer" asp-controller="Wishlist" asp-action="Index">
-                                <i class="bi bi-bookmark-fill"></i>Отложено
-                            </a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-light" asp-area="Customer" asp-controller="ShoppingBasket" asp-action="Index">
-                                <i class="bi bi-bag-check-fill"></i>Корзина
-                            </a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-light" asp-area="Customer" asp-controller="Orders" asp-action="Index">
-                                <i class="bi bi-box-seam"></i>Заказы
-                            </a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-light" asp-area="Customer" asp-controller="NotificationCustomer" asp-action="Index">
-                                <i class="bi bi-chat-dots-fill"></i> Сообщения
-                            </a>
-                        </li>
-                    </ul>
-                }
-
+                <div class="navbar-nav flex-grow-1 justify-content-end">
+                    <partial name="_FunctionsNavBar" />
+                </div>
                 <div class="navbar-nav flex-grow-1 justify-content-end">
                     <partial name="_LoginPartial" />
                 </div>
@@ -144,11 +52,11 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdn.tiny.cloud/1/p84zgz2zivny0yu94x04y98z4spl2bo2i5s5bswvjfygq36r/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
