--- a/Minotaur/Views/Shared/_Layout.cshtml
+++ b/Minotaur/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
         </nav>
     </header>
 
+    <a href="https://t.me/minotaurStore23_bot" target="_blank" style="position: fixed; bottom: 20px; right: 20px; font-size: 30px;"><i class="bi bi-telegram"></i></a>
+
+
     <div class="container">
         <main role="main" class="p-1">
             @RenderBody()
@@ -44,7 +47,7 @@
     </div>
 
     <footer class="border-top fixed-bottom footer text-muted">
-        <div class="">
+        <div>
             &copy; 2023 - Минота́вр - <a asp-area="Customer" asp-controller="Home" asp-action="Privacy"><i class="bi bi-shield-check"></i>Соглашение</a>
         </div>
     </footer>
