--- a/Minotaur/Areas/Customer/Views/Home/Details.cshtml
+++ b/Minotaur/Areas/Customer/Views/Home/Details.cshtml
@@ -1,73 +1,9 @@
-﻿@model Product
+﻿
 
 <div class="container">
-    <div>
-        <h1>@Model.Author : @Model.Name</h1>
-    </div>
-    <div class="row">
-        <div class="col-3">
-            <img src="@Model.ImageURL" alt="Image" class="rounded rounded-1 col-12" />
-        </div>
-        <div class="col-3 bg-body-tertiary rounded rounded-1">
-            <div>
-                Автор: @Model.Author
-            </div>
-            <div>
-                Издательство: Piter
-            </div>
-            <div>
-                ISBN: @Model.ISBN
-            </div>
-            <div>
-                Id товара: @Model.ProductId
-            </div>
-            <hr class="col-8 mt-1 mb-1" />
-            <div>
-                <div id="btnWishList_@Model.ProductId">
-                    <button type="submit" onclick="addToWishlist(event,@Model.ProductId)" class="btn btn-warning border-0 btn bi-heart mt-1 mb-2" style="width: 56px; height: 40px;">
-                    </button>
-                </div>
-                <div id="btnShoppingBasket_@Model.ProductId">
-                    <button type="submit" onclick="addToShoppingBasket(event,@Model.ProductId)"
-                            class="btn btn-success border-0 bi bi-cart" style="width: 56px; height: 40px;">
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="col-5">
-            <div>
-                Рейтинг: @Model.ProductRating из 10
-            </div>
-            <div>
-                @for (int i = 0; i < 10; i++)
-                {
-                    if (i < Model.ProductRating)
-                    {
-                        <i class="bi bi-star-fill"></i>
-                    }
-                    else
-                    {
-                        <i class="bi bi-star"></i>
-                    }
-                }
-            </div>
-            <div>
-                @Html.Raw(Model.Description)
-            </div>
-        </div>
-    </div>
-</div>
+    <div id="productData">
 
-<hr />
-<div class="text-dark ">
-    Oтзывы
-</div>
-<hr />
-<div class="mb-5 pb-5">
-    <div>
     </div>
-    <hr />
-</div>
 </div>
 
 @section Scripts{
