--- a/Minotaur/Areas/Customer/Views/ShoppingBasket/Index.cshtml
+++ b/Minotaur/Areas/Customer/Views/ShoppingBasket/Index.cshtml
@@ -1,35 +1,34 @@
 ﻿
 <div>
-    <div class="container">
+    <div class="mb-3">
         <div class="row">
-            <div class="col-10">
+            <div class="col-9">
                 <div id="shoppingBasket">
                 </div>
             </div>
-            <div class="col-2">
+            <div class="col-2 mt-5">
                 <div class="col-12">
                     <div id="orderingInformation">
                     </div>
                     <div id="checkout">
                     </div>
-                    <div id="isSave"> <button onclick="confirmChangeCount(event)" type="submit" class="mt-2 btn btn-success bi bi-floppy" hidden>Сохранить изменения</button></div>
+                    <div id="isSave"> <button onclick="confirmChangeCount()" type="submit" class="mt-2 btn btn-success bi bi-floppy" hidden>Сохранить изменения</button></div>
                     <div id="boxSelect">
                     </div>
-                </div>              
-
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 <style>
     input[type='number'] {
-        -moz-appearance: textfield;     
-        appearance: textfield; 
+        -moz-appearance: textfield;
+        appearance: textfield;
     }
 </style>
 
 @section Scripts{
-    <script src="~/js/Customer/WishList.js"></script>
     <script src="~/js/Customer/ShoppingBasket.js"></script>
 }
 
