--- a/Minotaur/Views/Shared/_Layout.cshtml
+++ b/Minotaur/Views/Shared/_Layout.cshtml
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Минота́вр </title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Minotaur.styles.css" asp-append-version="true" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css" />
 </head>
 <body>
@@ -35,18 +35,20 @@
                 </div>
             </div>
         </nav>
+        <a href="https://t.me/minotaurStore23_bot" target="_blank" style="position: fixed; bottom:30px; right: 20px; font-size: 30px;"><i class="bi bi-telegram"></i></a>
     </header>
 
-    <a href="https://t.me/minotaurStore23_bot" target="_blank" style="position: fixed; bottom: 20px; right: 20px; font-size: 30px;"><i class="bi bi-telegram"></i></a>
 
 
-    <div class="container">
+    <div>
         <main role="main" class="p-1">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top fixed-bottom footer text-muted">
+
+
+    <footer class="footer text-muted">
         <div>
             &copy; 2023 - Минота́вр - <a asp-area="Customer" asp-controller="Home" asp-action="Privacy"><i class="bi bi-shield-check"></i>Соглашение</a>
         </div>
@@ -59,7 +61,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdn.tiny.cloud/1/p84zgz2zivny0yu94x04y98z4spl2bo2i5s5bswvjfygq36r/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
