--- a/Minotaur/Areas/Customer/Views/NotificationCustomer/Index.cshtml
+++ b/Minotaur/Areas/Customer/Views/NotificationCustomer/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<div class="container-fluid">
+<div class="container-fluid mb-5 pb-5">
     <div class="row col-12">
         <div id="notificationData"></div>
     </div>
