--- a/Minotaur/Areas/Customer/Views/Home/Index.cshtml
+++ b/Minotaur/Areas/Customer/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="py-5">
+﻿<div class="py-5 style=" width: 100%; height: 100%"">
     <div class="mt-0 pt-0 mb-5 pb-5">
         <div id="productCards" class="row justify-content-center">
         </div>
