--- a/Minotaur/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Minotaur/Areas/Identity/Pages/Account/Login.cshtml
@@ -33,11 +33,11 @@
                     <p class="mt-1">
                         <a id="forgot-password" asp-page="./ForgotPassword">Забыли пароль?</a>
                     </p>
-                    <p class ="mt-1">
+                    <p class="mt-1">
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Зарегистрироваться</a>
                     </p>
-                    @* <p>
-                    <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                   @* <p class="mt-1">
+                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
                     </p>*@
                 </div>
             </form>
