--- a/Minotaur/Areas/Identity/Pages/Account/_ViewImports.cshtml
+++ b/Minotaur/Areas/Identity/Pages/Account/_ViewImports.cshtml
@@ -1,1 +1,9 @@
-﻿@using Minotaur.Areas.Identity.Pages.Account
+﻿@using Minotaur
+@using Minotaur.Models
+@using Minotaur.Models.SD
+@using Minotaur.DataAccess
+@using Minotaur.Areas.Customer
+@using Microsoft.AspNetCore.Identity
+@using Minotaur.Areas.Identity.Pages;
+@using Minotaur.Areas.Identity.Pages.Account
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
