--- a/Minotaur/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Minotaur/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,8 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using Minotaur.Areas.Identity
-@using Minotaur.Areas.Identity.Pages
-@using Minotaur.Models;
+﻿@using Minotaur
+@using Minotaur.Models
+@using Minotaur.Models.SD
+@using Minotaur.DataAccess
+@using Minotaur.Areas.Customer
+@using Microsoft.AspNetCore.Identity
+@using Minotaur.Areas.Identity.Pages;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
