--- a/Minotaur/Views/Shared/_FunctionsNavBar.cshtml
+++ b/Minotaur/Views/Shared/_FunctionsNavBar.cshtml
@@ -69,7 +69,7 @@
             </a>
         </li>
         <li>
-            <a class="nav-link text-light" asp-area="Customer" asp-controller="NotificationCustomer" asp-action="Index">
+            <a class="nav-link text-light" asp-area="Customer" asp-controller="Notification" asp-action="Index">
                 <i class="bi bi-chat-dots-fill"></i> Сообщения
             </a>
         </li>
