--- a/Minotaur/Areas/Customer/Views/Home/Details.cshtml
+++ b/Minotaur/Areas/Customer/Views/Home/Details.cshtml
@@ -29,18 +29,18 @@
                 </div>
                 <hr class="col-12 mt-1 mb-1" />
                 <div>
-                    @if (User.Identity?.IsAuthenticated != null)
+                    @if (User.Identity.IsAuthenticated  == true)
                     {
                         <div id="btnWishList_@Model.ProductId">
                             @if (ViewBag.inWishlist == false)
                             {
-                            <button onclick="addToWishlist(@Model.ProductId)" class="btn btn-outline-danger border-1 btn bi-heart mt-1 mb-2" style="width: 100%; height: 40px;">
-                            </button>
+                                <button onclick="addToWishlist(@Model.ProductId)" class="btn btn-outline-danger border-1 btn bi-heart mt-1 mb-2" style="width: 100%; height: 40px;">
+                                </button>
                             }
                             else
                             {
-                            <button onclick="removeFromWishlist(@Model.ProductId)" class="btn btn-outline-danger border-1 btn bi bi-heart-fill mt-1 mb-2" style="width:100%; height: 40px;">
-                            </button>
+                                <button onclick="removeFromWishlist(@Model.ProductId)" class="btn btn-outline-danger border-1 btn bi bi-heart-fill mt-1 mb-2" style="width:100%; height: 40px;">
+                                </button>
                             }
                         </div>
 
@@ -61,9 +61,9 @@
                     {
                         <button onclick="informAboutNeedToLogin()" class="btn btn-outline-danger border-1 btn bi-heart mt-1 mb-2" style="width: 100%; height: 40px;">
                         </button>
-                        <button onclick="informAboutNeedToLogin()" class="btn btn-outline-success border-1 bi bi-bag-check-fill" style="width:100%; height: 40px;">
+                        <button onclick="informAboutNeedToLogin()" class="btn btn-outline-success border-1 bi bi-bag" style="width:100%; height: 40px;">
                         </button>
-                    }                   
+                    }
                 </div>
             </div>
             <div class="col-5">
