--- a/Minotaur/Areas/Customer/Views/Home/Index.cshtml
+++ b/Minotaur/Areas/Customer/Views/Home/Index.cshtml
@@ -1,13 +1,11 @@
-﻿<div class="py-5 style=" width: 100%; height: 100%"">
-    <div class="mt-0 pt-0 mb-5 pb-5">
-        <div id="productCards" class="row justify-content-center">
+﻿<div class="pb-5 px-5">
+    <div class="mt-0 pt-0 mb-2 pb-2 d-flex flex-column align-items-end">
+        <div id="productCards" class="row justify-content-end justify-content-center px-2">
         </div>
-
-        <hr />
-        <div id="numberPages"></div>
     </div>
+    <hr />
+    <div id="numberPages"></div>
 </div>
-
 
 @section Scripts{
     <script src="~/js/Customer/Home.js"></script>
