--- a/Minotaur/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Minotaur/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,26 +1,73 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Profile";
+    ViewData["Title"] = "Профиль";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
 <h3>@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
+<div class="row mb-5">
     <div class="col-md-6">
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
-                <input asp-for="Username" class="form-control" placeholder="Please choose your username." disabled />
+                <input asp-for="Username" class="form-control" placeholder="" disabled />
                 <label asp-for="Username" class="form-label"></label>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number."/>
+                <input asp-for="Input.PhoneNumber" class="form-control" type="number" placeholder="Пожалуйста, введите ваш номер телефона." />
                 <label asp-for="Input.PhoneNumber" class="form-label"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.FirstName" class="form-control" placeholder="Пожалуйста, введите ваше имя." />
+                <label asp-for="Input.FirstName" class="form-label">Имя</label>
+                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Surname" class="form-control" placeholder="Пожалуйста, введите вашу фамилию." />
+                <label asp-for="Input.Surname" class="form-label">Фамилия</label>
+                <span asp-validation-for="Input.Surname" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.LastName" class="form-control" placeholder="Пожалуйста, введите вашу отчество." />
+                <label asp-for="Input.LastName" class="form-label">Отчество</label>
+                <span asp-validation-for="Input.LastName" class="text-danger"></span>
+            </div>
+            @if (Model.Input.DateofBirth == null)
+            {
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.DateofBirth" class="form-control" type="date" placeholder="Пожалуйста, введите вашу дату рождения."/>
+                    <label asp-for="Input.DateofBirth" class="form-label">Дата рождения</label>
+                    <span asp-validation-for="Input.DateofBirth" class="text-danger"></span>
+                </div>
+            }
+            else
+            {
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.DateofBirth" class="form-control" type="date" placeholder="Пожалуйста, введите вашу дату рождения." disabled/>
+                    <label asp-for="Input.DateofBirth" class="form-label">Дата рождения</label>
+                    <span asp-validation-for="Input.DateofBirth" class="text-danger"></span>
+                </div>
+            }
+            <div class="form-floating mb-3">
+                <input asp-for="Input.City" class="form-control" placeholder="Пожалуйста, введите ваш город." />
+                <label asp-for="Input.City" class="form-label">Город</label>
+                <span asp-validation-for="Input.City" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Street" class="form-control" placeholder="Пожалуйста, введите вашу улицу." />
+                <label asp-for="Input.Street" class="form-label">Улица</label>
+                <span asp-validation-for="Input.Street" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.HouseNumber" class="form-control" placeholder="Пожалуйста, введите номер вашего здания." />
+                <label asp-for="Input.HouseNumber" class="form-label">Номер здания</label>
+                <span asp-validation-for="Input.HouseNumber" class="text-danger"></span>
+            </div>
+
+            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Сохранить изменения</button>
         </form>
     </div>
 </div>
