--- a/Minotaur/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Minotaur/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -9,15 +9,15 @@
 
 <div class="row">
     <div class="col-md-6">
-        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
+        <p>Ваш аккаунт содержит персональные данные, которые вы предоставили нам. На этой странице вы можете загрузить или удалить эти данные.</p>
         <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+            <strong>"Удаление этих данных окончательно приведет к удалению вашей учетной записи, и это нельзя будет восстановить."</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post">
-            <button class="btn btn-primary" type="submit">Download</button>
+            <button class="btn btn-primary" type="submit">Скачать</button>
         </form>
         <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Удалить</a>
         </p>
     </div>
 </div>
