--- a/Minotaur/Views/Shared/_FunctionsNavBar.cshtml
+++ b/Minotaur/Views/Shared/_FunctionsNavBar.cshtml
@@ -17,6 +17,7 @@
                 <li><a class="nav-link text-light" asp-area="Admin" asp-controller="Category" asp-action="Index">Категории </a></li>
                 <li><a class="nav-link text-light" asp-area="Admin" asp-controller="Office" asp-action="Office">Офисы </a></li>
                 <li><a class="nav-link text-light" asp-area="Admin" asp-controller="Roles" asp-action="ViewRoles">Сотрудники </a></li>
+                <li><a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">Модерация отзывов !!!! </a></li>
             </ul>
         </div>
 
