--- a/Minotaur/Areas/Customer/Views/Orders/Index.cshtml
+++ b/Minotaur/Areas/Customer/Views/Orders/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿
 <h1>Заказы</h1>
 <div class="container mb-5">
+    <button onclick="goToReview()" class="btn btn-warning mb-1 mx-1">Мои отзывы</button>
     <div class="row" id="orders">
     </div>
 </div>
@@ -8,5 +9,6 @@
 
 @section Scripts{
     <script src="/js/Customer/Order.js"></script>
+    <script src="/js/Customer/Review.js"></script>
 }
 
