--- a/Minotaur/Areas/Customer/Views/Home/Details.cshtml
+++ b/Minotaur/Areas/Customer/Views/Home/Details.cshtml
@@ -29,7 +29,7 @@
                 </div>
                 <hr class="col-12 mt-1 mb-1" />
                 <div>
-                    @if (User.Identity.IsAuthenticated  == true)
+                    @if (User.Identity?.IsAuthenticated == true)
                     {
                         <div id="btnWishList_@Model.ProductId">
                             @if (ViewBag.inWishlist == false)
@@ -89,20 +89,31 @@
             </div>
         </div>
     </div>
-
     <hr />
     <div class="text-dark ">
         Oтзывы
     </div>
     <hr />
     <div class="mb-5 pb-5">
-        <div>
+        <div id="reviewsCard">
         </div>
-        <hr />
     </div>
+    <hr />
 </div>
 
 
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        getReviewsOnProduct(@Model.ProductId);
+    });
+</script>
+
 @section Scripts{
     <script src="~/js/Customer/Details.js"></script>
+    <script src="~/js/Customer/Review.js"></script>
 }
+
+
+
+
